# computer-vision

./: .gitignore  README.md
code/: Harris_Detector.py
hw/: README.md  ass1-score.xls  ass2-score.xls
hw/hw1/: README.md  requirements.txt
hw/hw1/code/Q4/: main.py
hw/hw1/code/Q5/: main.py
hw/hw1/code/Q6/: CMakeLists.txt
hw/hw1/code/Q6/src/: main.cpp
hw/hw1/latex/: hw1.tex
hw/hw2/: README.md  cameraParams.mat  main.m
hw/hw2/code/img2Bird/: CMakeLists.txt  README.md  camParams.xml  img2Bird.cpp
hw/hw2/code/monoCalib/: CMakeLists.txt  README.md  monoCalib.cpp  myLM.cpp  myLM.h
hw/hw2/latex/: hw2.tex
hw/hw3/: 2053932.stl  2053932_processed.stl  实验报告.md
hw/hw3/latex/: hw3.tex
pj/: 23fall计算机视觉分组和选题情况.xlsx  README.md
pj/code/catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
pj/code/catkin_ws2/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
pj/code/catkin_ws2/devel/lib/pkgconfig/: rplidar_ros.pc
pj/code/catkin_ws2/devel/lib/rplidar_ros/: rplidarNode  rplidarNodeClient
pj/code/catkin_ws2/devel/share/rplidar_ros/cmake/: rplidar_rosConfig.cmake
pj/code/control/: host.py
pj/code/iviz-CV-project/: README.md
